--- a/exampleSite/config/_default/menus.en.toml
+++ b/exampleSite/config/_default/menus.en.toml
@@ -40,6 +40,11 @@ url = "project/"
 weight = 3
 
 [[footer]]
+name = "Post"
+url = "post/"
+weight = 3
+
+[[footer]]
 name = "Contact"
 url = "contact/"
 weight = 7
