--- a/.forestry/front_matter/templates/post.yml
+++ b/.forestry/front_matter/templates/post.yml
@@ -1,6 +1,6 @@
 ---
 label: Post
-hide_body: false
+hide_body: true
 fields:
 - type: text
   name: title
@@ -18,17 +18,17 @@ fields:
 - type: text
   name: author
   label: author
-- type: text
-  name: description
-  label: description
-  description: this is meta description
-- type: list
-  name: categories
-  label: categories
-- type: list
-  name: tags
-  label: tags
-- type: text
-  name: type
-  label: type
-  default: post
+# - type: text
+#   name: description
+#   label: description
+#   description: this is meta description
+# - type: list
+#   name: categories
+#   label: categories
+# - type: list
+#   name: tags
+#   label: tags
+# - type: text
+#   name: type
+#   label: type
+#   default: post
